dist/todos/Deployment.todos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: todos
  name: todos
  namespace: todos
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: donetick-donetick-deployment-c85bc8db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: pvc-data
      labels:
        app.kubernetes.io/name: todos
        cdk8s.io/metadata.addr: donetick-donetick-deployment-c85bc8db
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: DT_ENV
              value: selfhosted
            - name: DT_NAME
              value: Cmdcentral Todos
            - name: DT_IS_USER_CREATION_DISABLED
              value: "false"
            - name: DT_DATABASE_TYPE
              value: postgres
            - name: DT_DATABASE_HOST
              value: prod.postgres.svc.cluster.local
            - name: DT_DATABASE_PORT
              value: "5432"
            - name: DT_DATABASE_USER
              value: donetick
            - name: DT_DATABASE_NAME
              value: donetick
            - name: DT_DATABASE_MIGRATION
              value: "false"
            - name: DT_DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DT_DATABASE_PASSWORD
                  name: secrets
            - name: DT_OAUTH2_NAME
              value: Cmdcentral Login
            - name: DT_OAUTH2_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: DT_OAUTH2_CLIENT_ID
                  name: secrets
            - name: DT_OAUTH2_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: DT_OAUTH2_CLIENT_SECRET
                  name: secrets
            - name: DT_OAUTH2_REDIRECT_URL
              value: https://todos.cmdcentral.xyz/auth/oauth2
            - name: DT_OAUTH2_SCOPES
              value: openid,profile,email
            - name: DT_OAUTH2_AUTH_URL
              value: https://login.cmdcentral.xyz/application/o/authorize/
            - name: DT_OAUTH2_TOKEN_URL
              value: https://login.cmdcentral.xyz/application/o/token/
            - name: DT_OAUTH2_USER_INFO_URL
              value: https://login.cmdcentral.xyz/application/o/userinfo/
          image: donetick/donetick
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 2021
          name: todos
          ports:
            - containerPort: 2021
          readinessProbe:
            failureThreshold: 3
            tcpSocket:
              port: 2021
          resources:
            limits:
              memory: 384Mi
            requests:
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /donetick-data
              name: pvc-data
            - mountPath: /config/selfhosted.yaml
              name: configmap-config
              subPath: selfhosted.yaml
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: pvc-data
          persistentVolumeClaim:
            claimName: data
            readOnly: false
        - configMap:
            name: config
          name: configmap-config
