dist/todos/Service.todos.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos
  namespace: todos
spec:
  externalIPs: []
  ports:
    - name: http
      port: 2021
      targetPort: 2021
  selector:
    cdk8s.io/metadata.addr: donetick-donetick-deployment-c85bc8db
  type: ClusterIP
