dist/todos/Ingress.todos.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: todos
  namespace: todos
spec:
  rules:
    - host: todos.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: todos
                port:
                  number: 2021
            path: /
            pathType: Prefix
    - host: donetick.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: todos
                port:
                  number: 2021
            path: /
            pathType: Prefix
    - host: tasks.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: todos
                port:
                  number: 2021
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - todos.cmdcentral.xyz
        - donetick.cmdcentral.xyz
        - tasks.cmdcentral.xyz
      secretName: todos-tls
